--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Serva",
+  "name": "serva",
   "main": "./lib/serva",
   "version": "0.1.1",
   "description": "Run a static web server from any directory in your project.",
